[package]
name = "moji_odpadki_parser"
version = "0.1.3"
edition = "2021"

[dependencies]
serde = { version = "1.0.204", default-features = false, features = ["serde_derive", "alloc"] }
thiserror = "1.0.63"

[features]

[dev-dependencies]
reqwest = { version = "0.12.5", features = ["blocking"] }
serde = { version = "1.0.204", features = ["serde_derive"] }
serde_json = "1.0.122"
